force-app/main/default/objects/Vehicle_Mileage__c/Vehicle_Mileage__c.object-meta.xml
<CustomObject>
    <label>Vehicle Mileage</label>
    <nameField>
        <displayFormat>RVM-{0000}</displayFormat>
        <label>Vehicle Millage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Mileages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>