force-app/main/default/objects/Vehicle_Mileage__c/fields/Total_Kilometers__c.field-meta.xml
<CustomField>
    <fullName>Total_Kilometers__c</fullName>
    <label>Total Kilometers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>