force-app/main/default/objects/Vehicle_Mileage__c/fields/Total_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileage__c</fullName>
    <formula>Total_Kilometers__c  /  Total_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Mileage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>