force-app/main/default/objects/Vehicle_Mileage__c/fields/Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTR_Vehicle_Master__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>REVA Owned</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTR_Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicle Mileages</relationshipLabel>
    <relationshipName>Vehicle_Mileages</relationshipName>
    <type>Lookup</type>
</CustomField>