force-app/main/default/objects/Vehicle_Mileage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Vehicle_Master__c</columns>
    <columns>Month__c</columns>
    <columns>Total_Kilometers__c</columns>
    <columns>Total_Mileage__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>